Refactor: Configuration, Error Handling, and Output Improvements
This commit introduces significant improvements to various modules of your project:

1.  External Configuration:
    - `mackolik_config.properties` and `nowgoal_config.properties` files were added for the `mackolik` and `nowgoal` modules, respectively.
    - Analysis parameters (league IDs, seasons, file paths, URLs, wait times, etc.) are now read from these files, increasing the code's flexibility.

2.  Enhanced Error Handling and Logging:
    - More comprehensive error handling (try-catch blocks, custom exception management) was implemented in Selenium operations, file I/O, and data parsing steps for both `mackolik` and `nowgoal` modules.
    - Standard SLF4J logging is now used throughout the project instead of System.out/err outputs, making it easier to track errors and processes.
    - Individual errors (e.g., inability to process a league or team) are prevented from interrupting the overall program flow.

3.  CSV Output for `mackolik` Module:
    - The `OptimizedScoreAnalyzer2` class was updated to write analysis results to a structured CSV file (`mackolik_results.csv`) instead of the console.

4.  `.gitignore` Update:
    - The `.gitignore` file was updated to ensure that generated configuration (`.properties`), output (`.csv`, `.xlsx`, `team_ids.txt`), and IDE (`.idea/`, `*.iml`) files are not included in the Git repository.

These changes make your project more robust, configurable, maintainable, and user-friendly.